--- a/templates/game.html
+++ b/templates/game.html
@@ -4,11 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styles/game.css">
     <title>Game Screen</title>
 </head>
 
 <body>
-
+    <div class="main">
+        <div id="infoText"></div>
+        <canvas id="gameCanvas"></canvas>
+    </div>
+    <script src="../controllers/game.js"></script>
 </body>
 
 </html>
