added phone responsiveness

--- a/templates/flowers.html
+++ b/templates/flowers.html
@@ -31,7 +31,7 @@
         </div>
     </div>
     <div class="text">
-        <h1>A flower for you 🌹</h1>
+        <h1>A flower pot for you 🪴</h1>
     </div>
 </body>
 
