--- a/styles/flowers.css
+++ b/styles/flowers.css
@@ -1,16 +1,17 @@
-
 body {
     margin: 0 auto;
     background: linear-gradient(135deg, #ff9a9e 0%, #fecfef 100%);
     min-height: 100vh;
     max-height: 100vh;
-    
+
 }
-.main{
+
+.main {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    
 }
 
 .pot-bottom {
@@ -59,8 +60,8 @@ body {
     left: 40%;
     transform-origin: bottom center;
     z-index: -1;
-    
-    
+
+
 }
 
 .petal-2 {
@@ -73,7 +74,7 @@ body {
     left: 60%;
     transform-origin: bottom center;
     z-index: 0;
-    
+
 }
 
 #petal1 {
@@ -94,7 +95,7 @@ body {
 
 #petal5 {
     transform: translate(-50%, -100px) rotate(288deg);
-    
+
 }
 
 .stem {
@@ -121,9 +122,105 @@ body {
     z-index: -10;
 
 }
-.text{
-    position: absolute;  
-    bottom: 10px;          
-    right: 10px; 
+
+.text {
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+    animation: popUp 1s ease forwards;
 }
 
+@media(max-width: 600px) {
+    .pot-bottom {
+        width: 160px;
+        height: 200px;
+        background: linear-gradient(160deg, #A8E6CF 0%, #DCEDC8 100%);
+        position: absolute;
+        top: 60%;
+        left: 50%;
+        transform: translateX(-50%);
+        clip-path: polygon(0% 100%, 100% 100%, 80% 0%, 20% 0%);
+        border-radius: 20px;
+    }
+
+    .petal-2 {
+        width: 50px;
+        height: 90px;
+        border-radius: 0 100px 0 100px;
+        background: linear-gradient(160deg, #a18cd1 0%, #fbc2eb 100%);
+        position: absolute;
+        top: 40%;
+        left: 70%;
+        transform-origin: bottom center;
+        z-index: 0;
+    }
+
+    .petal-1 {
+        width: 50px;
+        height: 90px;
+        border-radius: 0 100px 0 100px;
+        background: linear-gradient(160deg, #ee0979 0%, #ff6a00 100%);
+        position: absolute;
+        top: 40%;
+        left: 35%;
+        transform-origin: bottom center;
+        z-index: -1;
+    }
+
+    .text {
+        position: absolute;
+        top: 10px;
+        right: 10px;
+        text-align: center;
+    }
+
+    .center-1 {
+        width: 50px;
+        height: 50px;
+        border-radius: 50%;
+        background-color: #FFD700;
+        position: absolute;
+        top: 38%;
+        left: 35%;
+        transform: translate(-50%, -50%);
+        z-index: 0;
+    }
+
+    .center-2 {
+        width: 50px;
+        height: 50px;
+        border-radius: 50%;
+        background-color: #ADFF2F;
+        position: absolute;
+        top: 38%;
+        left: 70%;
+        transform: translate(-50%, -50%);
+        z-index: 1;
+    }
+
+    #stem1 {
+        position: absolute;
+        top: 42%;
+        left: 45%;
+        transform: rotate(-15deg);
+        z-index: -10;
+    }
+
+    #stem2 {
+        position: absolute;
+        top: 40%;
+        left: 60%;
+        transform: rotate(15deg);
+        z-index: -10;
+
+    }
+
+    .stem {
+        width: 15px;
+        height: 200px;
+        background-color: green;
+        position: absolute;
+        z-index: 10;
+    }
+
+}
